// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colon prop 1`] = `
<form class="zv-form">
  <div class="zv-cell zv-field">
    <div class="zv-cell__title zv-field__label"><span>Label:</span></div>
    <div class="zv-cell__value zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    </div>
  </div>
  <div class="zv-cell zv-field">
    <div class="zv-cell__title zv-field__label">Custom Label:</div>
    <div class="zv-cell__value zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`error-message-align prop 1`] = `
<form class="zv-form">
  <div class="zv-cell zv-field">
    <div class="zv-cell__value zv-cell__value--alone zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
      <div class="zv-field__error-message zv-field__error-message--right">Error</div>
    </div>
  </div>
</form>
`;

exports[`input-align prop 1`] = `
<form class="zv-form">
  <div class="zv-cell zv-field">
    <div class="zv-cell__value zv-cell__value--alone zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control zv-field__control--right"></div>
    </div>
  </div>
  <div class="zv-cell zv-field">
    <div class="zv-cell__value zv-cell__value--alone zv-field__value">
      <div class="zv-field__body">
        <div class="zv-field__control zv-field__control--right zv-field__control--custom">
          <div></div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`label-align prop 1`] = `
<form class="zv-form">
  <div class="zv-cell zv-field zv-field--label-right">
    <div class="zv-cell__title zv-field__label zv-field__label--right"><span>Label</span></div>
    <div class="zv-cell__value zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    </div>
  </div>
  <div class="zv-cell zv-field zv-field--label-center">
    <div class="zv-cell__title zv-field__label zv-field__label--center"><span>Label</span></div>
    <div class="zv-cell__value zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`label-width prop 1`] = `
<form class="zv-form">
  <div class="zv-cell zv-field">
    <div class="zv-cell__title zv-field__label" style="width: 5rem;"><span>Label</span></div>
    <div class="zv-cell__value zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    </div>
  </div>
  <div class="zv-cell zv-field">
    <div class="zv-cell__title zv-field__label" style="width: 10vw;"><span>Label</span></div>
    <div class="zv-cell__value zv-field__value">
      <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`validate-first prop 1`] = `
<form class="zv-form">
  <div class="zv-cell zv-field zv-field--error">
    <div class="zv-cell__value zv-cell__value--alone zv-field__value">
      <div class="zv-field__body"><input type="text" name="A" class="zv-field__control"></div>
      <div class="zv-field__error-message">A failed</div>
    </div>
  </div>
  <div class="zv-cell zv-field">
    <div class="zv-cell__value zv-cell__value--alone zv-field__value">
      <div class="zv-field__body"><input type="text" name="B" class="zv-field__control"></div>
    </div>
  </div> <button type="submit" class="zv-button zv-button--default zv-button--normal"></button>
</form>
`;
